# yolo8-cls_opencv

./: .gitignore  CMakeLists.txt  yolo8-cls.cpp  yolo8-cls.h
